--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
 </head>
 <body>
-    <div>hello  world11</div>
+    <div id="app">
+        {{title}}
+        <p>{{name}}</p>
+    </div>
 </body>
 </html>
